--- a/grub/grub.cfg
+++ b/grub/grub.cfg
@@ -1,7 +1,7 @@
-menuentry "WaspOS v0.1" {
-	echo "Starting WaspOS"
-	echo "v0.1"
-	multiboot /WaspOS.bin
+menuentry "AntOS v0.5" {
+	echo "Starting AntOS"
+	echo "v0.5"
+	multiboot /AntOS.bin
 #	module /initrd
 }
 set timeout=0
