--- a/Makefile-ISO
+++ b/Makefile-ISO
@@ -3,8 +3,12 @@
 BASE=~/AntOS
 BINNAME=AntOS.bin
 all:
+	@echo "[ISO] Copying Binarys to Grub Directory"
 	@mkdir -p $(BASE)/isodir/boot/grub
 	@cp $(BASE)/bin/$(BINNAME) $(BASE)/isodir/$(BINNAME)
 #	@cp $(BASE)/initrd/initrd.img       $(BASE)/isodir/initrd
 	@cp $(BASE)/grub/grub.cfg $(BASE)/isodir/boot/grub/grub.cfg
+	@mkdir -p $(BASE)/logs
+	@echo "[ISO] Creating ISO"
 	@grub-mkrescue -o AntOS.iso isodir > logs/xorriso-out.txt 2>&1
+	@echo "[ISO] ISO DONE!"
