--- a/grub/grub.cfg
+++ b/grub/grub.cfg
@@ -2,6 +2,7 @@ menuentry "AntOS v0.5" {
 	echo "Starting AntOS"
 	echo "v0.5"
 	multiboot /AntOS.bin
-#	module /initrd
+	module /initrd Pomething
+	module /initrd Pom
 }
-set timeout=0
+set timeout=1
